Modified index and stylesheet Signed-off-by: ZephyrGitCode <zephyr.dobson@outlook.com>

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 		<title>Zephyr Dobson Profile</title>
 	</head>
 	<body>
-    <p>Name: Zephyr Dobson</p>
+		<div class="view">
+			<p class="mobile">Mobile View!</p>
+			<p class = "desktop">Desktop View!</p>
+		</div>
+		<div class="container">
+    	<p>Name: Zephyr Dobson</p>
+			<p>Course: Currently studying a Bachelor of Software Engineering (BSENGH)</p>
+			<p>About Me: I am 19 and I hope to learn the industry and codding
+				skills that will allow me to persue a career as a video game developer.</p>
+		</div>
 	</body>
 </html>
