Added image of self, and other improvements

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 			<p class = "desktop">Desktop View!</p>
 		</div>
 		<div class="container">
-    	<p>Name: Zephyr Dobson</p>
-			<p>Course: Currently studying a Bachelor of Software Engineering (BSENGH)</p>
-			<p>About Me: I am 19 and I hope to learn the industry and codding
-				skills that will allow me to persue a career as a video game developer.</p>
+			<img src="zephyr.jpg">
+			<p>Name: Zephyr Dobson<br/><br/> Course: Currently studying a Bachelor of Software Engineering (BSENGH) <br/><br/> About Me: I am 19 and I hope to learn the industry and codding skills that will allow me to persue a career as a video game developer.
+			<br/><br/>Interests: Video games, Marvel Movies, Mountain Bike Riding, Remote Csontrol Cars</p>
 		</div>
 	</body>
 </html>
