--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 	</head>
 	<body>
 		<div class="view">
-			<p class="mobile">Mobile View!</p>
-			<p class = "desktop">Desktop View!</p>
+			<h1 class="mobile">Mobile View!</h1>
+			<h1 class = "desktop">Desktop View!</h1>
 		</div>
 		<div class="container">
-			<img src="zephyr.jpg">
-			<p>Name: Zephyr Dobson<br/><br/> Course: Currently studying a Bachelor of Software Engineering (BSENGH) <br/><br/> About Me: I am 19 and I hope to learn the industry and codding skills that will allow me to persue a career as a video game developer.
-			<br/><br/>Interests: Video games, Marvel Movies, Mountain Bike Riding, Remote Csontrol Cars</p>
-			<div id="mobileapp">
-				<p>A mobile application</p>
+			<div class="image">
+				<img src="zephyr.jpg">
+			</div>
+			<div class="content">
+				<p>Name: Zephyr Dobson<br/><br/> Course: Currently studying a Bachelor of Software Engineering (BSENGH) <br/><br/> About Me: I am 19 and I hope to learn the industry and codding skills that will allow me to persue a career as a video game developer.
+					<br/><br/>Interests: Video games, Marvel Movies, Mountain Bike Riding, Remote Csontrol Cars</p></br>
+
+					<p>A mobile application is a program or software designed to run efficently and effectively on in portable situations.</br>
+						Most notably on mobile devices. A mobile application specializes in being optimised on mobile devices.
+					</p>
+
 			</div>
 		</div>
 	</body>
