--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link href="stylesheet.css" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+		<meta name="Description" content="Zephyr profile page">
 		<title>Zephyr Dobson Profile</title>
 	</head>
 	<body>
@@ -13,7 +14,7 @@
 		</div>
 		<div class="container">
 			<div class="image">
-				<img src="zephyr.jpg">
+				<img src="zephyr.jpg" alt="Background-Image">
 			</div>
 			<div class="content">
 				<p>Name: Zephyr Dobson<br/><br/> Course: Currently studying a Bachelor of Software Engineering (BSENGH) <br/><br/> About Me: I am 19 and I hope to learn the industry and codding skills that will allow me to persue a career as a video game developer.
