--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<img src="zephyr.jpg" alt="Background-Image">
 			</div>
 			<div class="content">
-				<p>Name: Zephyr Dobson<br/><br/> Course: Currently studying a Bachelor of Software Engineering (BSENGH) <br/><br/> About Me: I am 19 and I hope to learn the industry and codding skills that will allow me to persue a career as a video game developer.
+				<p>Name: Zephyr Dobson<br/><br/> Course: Currently studying a Bachelor of Software Engineering (BSENGH) <br/><br/> About Me: I am 19 and I aspire to be a videogame developer.
 					<br/><br/>Interests: Video games, Marvel Movies, Mountain Bike Riding, Remote Csontrol Cars</p></br>
 
 					<p>A mobile application is a program or software designed to run efficently and effectively on in portable situations.</br>
