Modifed for accessibility

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
 				<img src="zephyr.jpg" alt="Background-Image">
 			</div>
 			<div class="content">
-				<p>Name: Zephyr Dobson<br/><br/> Course: Currently studying a Bachelor of Software Engineering (BSENGH) <br/><br/> About Me: I am 19 and I aspire to be a videogame developer.
-					<br/><br/>Interests: Video games, Marvel Movies, Mountain Bike Riding, Remote Csontrol Cars</p></br>
+				<h2>About me:</h2>
+				<p>Name: Zephyr Dobson</p>
+				<p>Course: Currently studying a Bachelor of Software Engineering (BSENGH)</p>
+				<p>About Me: I am 19 and I aspire to be a videogame developer.</p>
+				<p>Interests: Video games, Marvel Movies, Mountain Bike Riding, Remote Control Cars</p>
 
-					<p>A mobile application is a program or software designed to run efficently and effectively on in portable situations.</br>
-						Most notably on mobile devices. A mobile application specializes in being optimised on mobile devices.
-					</p>
+				<h2>Mobile Applications:</h2>
+				<p>A mobile application is a program or software designed to run efficently and effectively on in portable situations.</p>
+				<p>Most notably on mobile devices. A mobile application specializes in being optimised on mobile devices.</p>
 
 			</div>
 		</div>
