--- a/index.html
+++ b/index.html
@@ -17,15 +17,20 @@
 				<img src="zephyr.jpg" alt="Background-Image">
 			</div>
 			<div class="content">
-				<h2>About me:</h2>
-				<p>Name: Zephyr Dobson</p>
-				<p>Course: Currently studying a Bachelor of Software Engineering (BSENGH)</p>
-				<p>About Me: I am 19 and I aspire to be a videogame developer.</p>
-				<p>Interests: Video games, Marvel Movies, Mountain Bike Riding, Remote Control Cars</p>
 
-				<h2>Mobile Applications:</h2>
-				<p>A mobile application is a program or software designed to run efficently and effectively on in portable situations.</p>
-				<p>Most notably on mobile devices. A mobile application specializes in being optimised on mobile devices.</p>
+				<article>
+					<h2>About me:</h2>
+					<p>Name: Zephyr Dobson</p>
+					<p>Course: Currently studying a Bachelor of Software Engineering (BSENGH)</p>
+					<p>About Me: I am 19 and I aspire to be a videogame developer.</p>
+					<p>Interests: Video games, Marvel Movies, Mountain Bike Riding, Remote Control Cars</p>
+				</article>
+				
+				<article>
+					<h2>Mobile Applications:</h2>
+					<p>A mobile application is a program or software designed to run efficently and effectively on in portable situations.</p>
+					<p>Most notably on mobile devices. A mobile application specializes in being optimised on mobile devices.</p>
+				</article>
 
 			</div>
 		</div>
