--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 		<meta name="Description" content="Zephyr profile page">
 		<title>Zephyr Dobson Profile</title>
+		<script src="resgisterworker.js"></script>
 	</head>
 	<body>
 		<div class="view">
@@ -25,7 +26,7 @@
 					<p>About Me: I am 19 and I aspire to be a videogame developer.</p>
 					<p>Interests: Video games, Marvel Movies, Mountain Bike Riding, Remote Control Cars</p>
 				</article>
-				
+
 				<article>
 					<h2>Mobile Applications:</h2>
 					<p>A mobile application is a program or software designed to run efficently and effectively on in portable situations.</p>
