--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 		<meta name="Description" content="Zephyr profile page">
 		<title>Zephyr Dobson Profile</title>
-		<script src="ResgisterWorker.js"></script>
+		<script src="RegisterWorker.js"></script>
 	</head>
 	<body>
 		<div class="view">
