--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="Description" content="Zephyr profile page">
 		<title>Zephyr Dobson Profile</title>
 		<script src="RegisterWorker.js"></script>
+		<link rel="manifest" href="manifest.json">
 	</head>
 	<body>
 		<div class="view">
