--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 					<p>A mobile application is a program or software designed to run efficently and effectively on in portable situations.</p>
 					<p>Most notably on mobile devices. A mobile application specializes in being optimised on mobile devices.</p>
 				</article>
-
 			</div>
 		</div>
+		<img style="display: hidden;" src="totalshock.png" alt="randomimage">
 	</body>
 </html>
