--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 				</article>
 			</div>
 		</div>
-		<img style="display: hidden;" src="totalshock.png" alt="randomimage">
+		<img src="totalshock.png" style="visibility: hidden;" alt="randomimage">
 	</body>
 </html>
